add event methods
