# internal/router/router.go
@@ -11,6 +11,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger" // swagger ui handler（swagger ui handler）
 
 	"iot-api/internal/controlGate"
+	"iot-api/internal/event"
 	"iot-api/internal/health"
 	"iot-api/internal/middleware"
 	"iot-api/internal/rooms"
@@ -24,8 +25,8 @@ func New(db *sql.DB) *gin.Engine {
 	r.GET("/ping", health.Ping)
 	r.GET("/rooms", rooms.List(db))
 	r.GET("/rooms/devices/state", rooms.GetDeviceStates(db))
-
 	r.GET("/control-gate", controlGate.GetControlGate(db))
+	r.GET("/events", event.ListEvents(db))
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
